--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.application.name=pagamentos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
 server.port=0
 
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.leaseExpirationDurationInSeconds=30
+
+
 resilience4j.circuitbreaker.instances.atualizaPedido.slidingWindowSize: 3
 resilience4j.circuitbreaker.instances.atualizaPedido.minimumNumberOfCalls: 2
 resilience4j.circuitbreaker.instances.atualizaPedido.waitDurationInOpenState: 50s
